sfdx/main/default/objects/Watched_Video__c/Watched_Video__c.object-meta.xml
<CustomObject>
    <description>Stores data about each instance of a user watching a video</description>
    <label>Watched Video</label>
    <nameField>
        <label>Watched Video ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Watched Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>