sfdx/main/default/objects/Watched_Video__c/fields/ResourceID__c.field-meta.xml
<CustomField>
    <fullName>ResourceID__c</fullName>
    <description>Youtube Video ID</description>
    <inlineHelpText>Youtub Video ID</inlineHelpText>
    <label>Resource ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>