sfdx/main/default/objects/Watched_Video__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Last watched duration of given video.</description>
    <inlineHelpText>Last watched duration of given video.</inlineHelpText>
    <label>Timestamp</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>