sfdx/main/default/objects/Watched_Video__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <description>User ID</description>
    <inlineHelpText>User ID</inlineHelpText>
    <label>User ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>